--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="TempMinima">0º</string>
     <string name="condição">tempo</string>
     <string name="refresh">Refresh</string>
+    <string name="Title_activity_settings">Settings</string>
+
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_key">location</string>
+    <string name="pref_location_default">Lages</string>
+    <string name="pref_location_value">Lages</string>
+
 </resources>
