--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Sunshine</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_settingsRefresh">Refresh</string>
     <string name="Segunda">Segunda</string>
     <string name="ImgTeste">Imagem de Teste</string>
     <string name="TempMaxima">0º</string>
@@ -17,4 +18,9 @@
     <string name="pref_location_default">Lages</string>
     <string name="pref_location_value">Lages</string>
 
+    <string name="pref_temp_units_label">Temperature Units</string>
+    <string name="pref_temp_units_key">units</string>
+    <string name="pref_temp_units_default">metric</string>
+    <string name="pref_temp_units_value">Metric</string>
+    <string name="pref_temp_units_imperial">imperial</string>
 </resources>
